
// To run do:
// ./gradlew run

// To build a distribution zip:
// ./gradlew distZip

// To build a OS distribution :
// ./gradlew jpackage


plugins {
    id 'java'
    id 'application'
    id 'java-library'
    id 'org.openjfx.javafxplugin' version '0.0.9'

    //id "com.palantir.graal" version "0.7.1-9-gced34a0"
    //id 'com.gluonhq.client-gradle-plugin' version '0.1.36'
}

sourceCompatibility = 11
targetCompatibility = 11

application {
    mainClassName = 'klik.Klik_application'
    //mainClassName = 'klik.images.Image_scaler'
    applicationDefaultJvmArgs = ["-Xms6G", "-Xmx12G"]
    //applicationDefaultJvmArgs = ["-Xms6G", "-Xmx12G","--module-path=/Users/philippegentric/javafx/javafx-sdk-14.0.2.1/lib", "--add-modules=javafx.controls"]

}

javafx {
    version = "14"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing','javafx.graphics','javafx.media' ]
}

dependencies {
	//implementation 'com.lmax:disruptor:3.4.2'
    //compile group: 'com.lmax', name: 'disruptor', version: '3.4.2'
    implementation 'com.drewnoakes:metadata-extractor:2.13.0'
}
repositories {
    mavenCentral()
}

//graal {
//    mainClass 'klik.Klik_application'
//    outputName 'klikapp'
//    javaVersion '11'
    //option "-H:PrintFlags"
    //-Djava.library.path=/Users/philippegentric/javafx/javafx-sdk-14.0.2.1/lib"
//}

jar {
    from {
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
        configurations.runtimeClasspath.collect {  it.isDirectory() ? it : zipTree(it)  }
    } {
        exclude "META-INF/*.SF"
        exclude "META-INF/*.DSA"
        exclude "META-INF/*.RSA"
    }
    manifest {
        attributes ('Implementation-Title': 'klik',
                    'Class-Path': 'Klik-1.0-SNAPSHOT.jar ',
                    'Main-Class': 'klik.Klik_application')
    }
}

